--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>flexbox</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Joao não ama o tomato</h1>
+<main>
+    <figure class="lanches">
+        <img src="./fotos/coxinha-3.jpg" alt="">
+        <img src="./fotos/4fdb725d-ede5-4c51-b2bf-ea5d506e3763-joelho-de-presunto-e-queijo-massa-de-salgados-assados-pai-tambem-cozinha-0.jpg" alt="">
+        <img src="./fotos/hamburger-de-forno1200480.jpg" alt="">
+    </figure>
+</main>
 </body>
 </html>
