--- a/index.html
+++ b/index.html
@@ -7,12 +7,42 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header>
+        <nav>
+       <ul>
+        <li>Inicio</li>
+        <li>Pulares</li>
+        <li>Combos</li>
+        <li>Salgados</li>
+        <li>Bebidas</li>
+       </ul>
+    </header>
 <main>
     <figure class="lanches">
-        <img src="./fotos/coxinha-3.jpg" alt="">
-        <img src="./fotos/4fdb725d-ede5-4c51-b2bf-ea5d506e3763-joelho-de-presunto-e-queijo-massa-de-salgados-assados-pai-tambem-cozinha-0.jpg" alt="">
-        <img src="./fotos/hamburger-de-forno1200480.jpg" alt="">
+        <img class="bogies" src="./fotos/coxinha-3.jpg" alt="">
+        <img class="bogies" src="./fotos/4fdb725d-ede5-4c51-b2bf-ea5d506e3763-joelho-de-presunto-e-queijo-massa-de-salgados-assados-pai-tambem-cozinha-0.jpg" alt="">
+        <img class="bogies" src="./fotos/hamburger-de-forno1200480.jpg" alt="">
     </figure>
 </main>
+<footer>
+    <nav>
+        <ol>Atendimento</ol>
+        <ol>Local</ol>
+        <ol>Quem somos</ol>
+        <ol>Ajuda</ol>
+        <ol>Feedback</ol>
+    </nav>
+    <section>
+            <figure>
+            <img src="fotos/Instagram-Icon.png" alt="">
+        </figure>
+        <figure>
+            <img src="fotos/Logo_of_Twitter.svg.webp" alt="">
+        </figure>
+        <figure>
+            <img class="zap" src="fotos/unnamed.png" alt="">
+        </figure>
+    </section>
+</footer>
 </body>
 </html>
